--- a/examples/Application 1/Application_1.ipynb
+++ b/examples/Application 1/Application_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_df = pd.read_csv('Application_1_All_Results.csv')"
+    "results_df = pd.read_csv('Application_1_All_Results.csv',encoding = \"ISO-8859-1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -53,67 +53,91 @@
        "      <th>ID</th>\n",
        "      <th>omega</th>\n",
        "      <th>integrated_populations</th>\n",
+       "      <th>int_pop_t_normalized</th>\n",
        "      <th>integrated_coherences</th>\n",
+       "      <th>int_coh_normalized</th>\n",
        "      <th>final_sink_pop</th>\n",
        "      <th>time</th>\n",
+       "      <th>Full Arrival</th>\n",
        "      <th>t2_population</th>\n",
+       "      <th>simulation_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>isomorphic_graphs/5.mtx</td>\n",
-       "      <td>5</td>\n",
+       "      <td>isomorphic_graphs/7.mtx</td>\n",
+       "      <td>7</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>180.996374</td>\n",
-       "      <td>365.943210</td>\n",
-       "      <td>0.979014</td>\n",
-       "      <td>999999999.0</td>\n",
+       "      <td>1339.472222</td>\n",
+       "      <td>0.669736</td>\n",
+       "      <td>1193.179462</td>\n",
+       "      <td>0.596590</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>1774.536133</td>\n",
+       "      <td>F</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>isomorphic_graphs/1.mtx</td>\n",
-       "      <td>1</td>\n",
+       "      <td>isomorphic_graphs/31.mtx</td>\n",
+       "      <td>31</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>93.981265</td>\n",
-       "      <td>196.503955</td>\n",
-       "      <td>0.999921</td>\n",
-       "      <td>999999999.0</td>\n",
+       "      <td>1015.500000</td>\n",
+       "      <td>0.507750</td>\n",
+       "      <td>1377.756308</td>\n",
+       "      <td>0.688878</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1951.660156</td>\n",
+       "      <td>F</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>isomorphic_graphs/8.mtx</td>\n",
-       "      <td>8</td>\n",
+       "      <td>isomorphic_graphs/32.mtx</td>\n",
+       "      <td>32</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>75.664756</td>\n",
-       "      <td>153.855714</td>\n",
-       "      <td>0.999990</td>\n",
-       "      <td>999999999.0</td>\n",
+       "      <td>1002.625000</td>\n",
+       "      <td>0.501313</td>\n",
+       "      <td>2068.227251</td>\n",
+       "      <td>1.034114</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>177.734375</td>\n",
+       "      <td>F</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>isomorphic_graphs/10.mtx</td>\n",
-       "      <td>10</td>\n",
+       "      <td>isomorphic_graphs/13.mtx</td>\n",
+       "      <td>13</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>52.984816</td>\n",
-       "      <td>92.016218</td>\n",
-       "      <td>0.998769</td>\n",
-       "      <td>999999999.0</td>\n",
+       "      <td>1006.250000</td>\n",
+       "      <td>0.503125</td>\n",
+       "      <td>553.897782</td>\n",
+       "      <td>0.276949</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1048.828125</td>\n",
+       "      <td>F</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>isomorphic_graphs/22.mtx</td>\n",
-       "      <td>22</td>\n",
+       "      <td>isomorphic_graphs/24.mtx</td>\n",
+       "      <td>24</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>217.879925</td>\n",
-       "      <td>368.859164</td>\n",
-       "      <td>0.996394</td>\n",
-       "      <td>999999999.0</td>\n",
+       "      <td>1006.250000</td>\n",
+       "      <td>0.503125</td>\n",
+       "      <td>1282.041424</td>\n",
+       "      <td>0.641021</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>378.051758</td>\n",
+       "      <td>F</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -121,21 +145,28 @@
       ],
       "text/plain": [
        "                      graph  ID  omega  integrated_populations  \\\n",
-       "0   isomorphic_graphs/5.mtx   5    0.0              180.996374   \n",
-       "1   isomorphic_graphs/1.mtx   1    0.0               93.981265   \n",
-       "2   isomorphic_graphs/8.mtx   8    0.0               75.664756   \n",
-       "3  isomorphic_graphs/10.mtx  10    0.0               52.984816   \n",
-       "4  isomorphic_graphs/22.mtx  22    0.0              217.879925   \n",
+       "0   isomorphic_graphs/7.mtx   7    0.0             1339.472222   \n",
+       "1  isomorphic_graphs/31.mtx  31    0.0             1015.500000   \n",
+       "2  isomorphic_graphs/32.mtx  32    0.0             1002.625000   \n",
+       "3  isomorphic_graphs/13.mtx  13    0.0             1006.250000   \n",
+       "4  isomorphic_graphs/24.mtx  24    0.0             1006.250000   \n",
        "\n",
-       "   integrated_coherences  final_sink_pop         time  t2_population   \n",
-       "0             365.943210        0.979014  999999999.0             1.0  \n",
-       "1             196.503955        0.999921  999999999.0             1.0  \n",
-       "2             153.855714        0.999990  999999999.0             1.0  \n",
-       "3              92.016218        0.998769  999999999.0             1.0  \n",
-       "4             368.859164        0.996394  999999999.0             1.0  "
+       "   int_pop_t_normalized  integrated_coherences  int_coh_normalized  \\\n",
+       "0              0.669736            1193.179462            0.596590   \n",
+       "1              0.507750            1377.756308            0.688878   \n",
+       "2              0.501313            2068.227251            1.034114   \n",
+       "3              0.503125             553.897782            0.276949   \n",
+       "4              0.503125            1282.041424            0.641021   \n",
+       "\n",
+       "   final_sink_pop         time Full Arrival  t2_population   simulation_time  \n",
+       "0        0.333333  1774.536133            F             1.0             2000  \n",
+       "1        0.500000  1951.660156            F             1.0             2000  \n",
+       "2        0.500000   177.734375            F             1.0             2000  \n",
+       "3        0.500000  1048.828125            F             1.0             2000  \n",
+       "4        0.500000   378.051758            F             1.0             2000  "
       ]
      },
-     "execution_count": 250,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
